syntax = "proto3";

package protobuf;

message RedirectFindRequest {
    string code = 1;
}

message RedirectFindResponse {
    string code = 1;
    string url = 2;
}

message RedirectStoreRequest {
    string url = 2;
}

message RedirectStoreResponse {
    string code = 1;
    string url = 2;
}

service ShortenerService {
    rpc Store (RedirectStoreRequest) returns (RedirectStoreResponse);
    rpc Find (RedirectFindRequest) returns (RedirectFindResponse);
}